yoshimi 2.3.2 M

2024-3-17 Will
bn 2321
Split off config state loading from LV2

**Reverted this change**

BugFix: "Enable Single Master" accesssable on secondary instances.
Removed (now redundant) disabled code from SynthEngine.cpp
Also removed long unused SSE code from Config.cpp

2024-3-11 Will
bn 2320
BugFix: CLI not recognising 'type' returned by limits code.
BugFix: Master detune not identified as float type.

BugFix: CLI not checking XML copmpression range.
Forced type to integer for all CLI config tests.

Moved config limits from SynthEngine to Config.
    Don't seem to be used anywhere though.

Transfered Vector load/save from SynthEngine to
    new /Interchange/Vectors

2024-3-7 Will
bn 2319
Merged in new GUI/core interface from Hermann
Cleaned up some doccumentation
Set CMakeLists for (usually) faster GUI compilation

2024-2-19 Will
bn 2318
Final cleanups
Set release version 2.3.2

2024-2-18 Will
bn 2317
Some small CLI text corrections
Updated HTML guide
Cleaned up some coding style inconsistencies
No code changes

Set minimum C++ standard as 17
Updated copyright notices

2024-2-17 Will
bn 2316
BugFix: From Kristian: Missing file in LV2 code
BugFix: From Kristian: Incorrect Kitmode GUI setting
Set version 2.3.2 rc2

2024-2-14 Will
bn 2315
BugFix: Wrong default for insert type chorus volume.
BugFix: New echo separate button text not scaled.
BugFix: Effects text not rescaled if opened at large size.
BugFix: Sys/Ins not rescaled if window resized when hidden.
Updated Yoshimi Control data.
Finalised integration of separate L/R Echo repeat rates.
Revised some of the User Guide.
Added some instrument patches.

2024-2-11 Will
bn 2314
Merged in Kristian's improvements
Updated Yoshimi Control Data

2024-2-9 Will
bn 2313
Build option ReportNoteTimes now working properly.
Various small GUI refinements and cleanups.

2024-2-8 Will
bn 2312
CLI can now handle master volume and master detune as floats.
Completed conversion of normal SubSynth controls.