@@ -151,7 +151,21 @@
     <div class="tab">
     Frogs
     </div>
+    <br>
+    <b>master</b><br>
+    Drums
+    <div class="tab">
+    Soft Kick<br>
+    rimshot low<br>
+    rimshot<br>
+    rimshot lite<br>
+    </div>
+    Noises
+    <div class="tab">
+    Slow Wind<br>
+    Explosion<br>
+    Explosion Canyon<br>
+    </div>
     </p>
-
   </body>
 </html>
